# sparkleframe

./: .gitignore  Makefile  README.md  changelog.md  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-pkg.in  requirements-pkg.txt  versions.json
.docker/: Dockerfile  docker-compose.yaml
.github/workflows/: deploy-docs-pypi.yml  deploy-docs.yml  deploy-pypi.yml  deploy.yml  deploy_docs.yml  predeploy.yml  verification.yml
0.2/: 404.html  index.html
0.2/changelog/: index.html
0.2/search/: search_index.json
0.2/supported_api/: index.html
0.2/supported_api_doc/: index.html
0.3/changelog/: index.html
0.3/search/: search_index.json
0.3/supported_api/: index.html
0.3/supported_api_doc/: index.html
0.4/: index.html
0.4/changelog/: index.html
0.4/search/: search_index.json
0.4/supported_api/: index.html
0.4/supported_api_doc/: index.html
0.5/changelog/: index.html
0.5/search/: search_index.json
0.5/supported_api/: index.html
0.5/supported_api_doc/: index.html
0.6/: objects.inv
0.6/changelog/: index.html
0.6/search/: search_index.json
0.6/supported_api/: index.html
0.6/supported_api_doc/: index.html
0.7/: 404.html  index.html
0.7/changelog/: index.html
0.7/search/: search_index.json
0.7/supported_api/: index.html
1.0/changelog/: index.html
docs/: generate_supported_api.py  supported_api_doc.md
scripts/: calculate_version.py  generate_changelog.py  generate_changelog_test.py  utils.py
sparkleframe/: __init__.py  activate.py  context.py  engine.py  gpt_utils.py  sparkleframe_test.py
(+30 files in other folders)
