[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sparkleframe"
authors = [
    {name = "Jose Helio de Brum Muller", email = "josemuller.flypipe@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies  = [
    "polars >= 1.39.3",
    "pandas >= 2.2.3",
    "pyarrow >= 19.0.1"
]

[project.urls]
Home = "https://github.com/flypipe/sparkleframe.git"

[tool.black]
line-length = 119
target-version = ["py311"]
